[package]
name = "grovedb-visualize"
version = "4.0.0"
edition = "2024"
license = "MIT"
description = "Debug prints extension crate for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-visualize"
repository = "https://github.com/dashpay/grovedb"

[dependencies]
hex = { workspace = true }
itertools = { workspace = true }
